@@ -12,7 +12,7 @@
     <td width="21"> <h1></h1></td>
     <td width="885"> <font face="Verdana, Arial, Helvetica, sans-serif"><b><font size="6">The 
       Tracing Facility</font></b></font></td>
-    <td width="96"><a href="http://spirit.sf.net"><img src="theme/wave.gif" width="93" height="68" align="right" border="0"></a></td>
+    <td width="96"><a href="http://www.boost.org"><img src="theme/wave.gif" width="93" height="68" align="right" border="0"></a></td>
   </tr>
 </table>
 <br>
@@ -160,4 +160,4 @@
 </body>
 </html>
 
-<!-- #BeginDate format:fcAm1m -->Sunday, May 8, 2005  19:55<!-- #EndDate -->
+<!-- #BeginDate format:fcAm1m -->Sunday, May 8, 2005  19:55<!-- #EndDate --><!-- #BeginDate format:fcAm1m -->Sunday, May 15, 2005  12:23<!-- #EndDate -->
